--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,11 @@
     <version>6.1.1</version>
 </dependency>
   
-  
+      <dependency>
+      <groupId>io.rest-assured</groupId>
+      <artifactId>rest-assured</artifactId>
+      <version>5.3.1</version>
+    </dependency>
   
 <dependency>
     <groupId>com.sun.mail</groupId>
@@ -50,7 +54,7 @@
      <dependency>
     <groupId>com.google.code.gson</groupId>
     <artifactId>gson</artifactId>
-    <version>2.8.8</version> <!-- Check for the latest version -->
+    <version>2.8.8</version> 
 </dependency>
      
   </dependencies>
@@ -68,14 +72,9 @@
         </plugin>
         
         <plugin>
-    <groupId>org.apache.maven.plugins</groupId>
-    <artifactId>maven-surefire-plugin</artifactId>
-    <version>3.0.0-M7</version>
-    <configuration>
-        <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
-        <useFile>false</useFile>
-    </configuration>
-	</plugin>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.0.0-M5</version>
+        </plugin>
 	
 	
     </plugins>
